# magic-domain-program

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  publish-crate.yml
src/: consts.rs  entrypoint.rs  lib.rs  serde.rs  solana_compact.rs
src/instructions/: mod.rs  register.rs  sync.rs  unregister.rs
src/instructions/version/: v0.rs
src/processors/: register.rs  sync.rs  unregister.rs
src/state/: features.rs  field.rs  mod.rs  record.rs
src/state/version/: v0.rs
tests/: common.rs  test_registration.rs  test_sync.rs  test_sync_info.rs
