[package]
name = "magic-domain-program"
description = "Domain registration program for Ephemeral Rollups"
version = "0.1.0"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/magic-domain-program"
readme = "./README.md"
keywords = ["solana", "crypto", "registration", "ephemeral-rollups", "magicblock"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mdp"

[dependencies]
# solana
solana-program = { version = ">=1.6" }
solana-system-interface = { version = ">=1", features = ["bincode"]}
security-txt = { version = ">=1", package = "solana-security-txt", optional = true }
 
# serialization/deserialization
borsh = { version = ">=1", features = [ "derive" ] }
bytemuck_derive = ">=1"

[dev-dependencies]
solana-sdk = { version = ">=1.6" }
solana-program-test = { version = ">=1.6" }
tokio = { version = ">=1", features = [ "macros", "rt" ] }

[features]
entrypoint = ["security-txt"]
default = ["entrypoint"]
disable-realloc = []
modular-sdk = []



